--- a/app/src/main/res/layout/activity_groups_list.xml
+++ b/app/src/main/res/layout/activity_groups_list.xml
@@ -2,8 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ListView android:id="@+id/list"
+<android.support.v7.widget.RecyclerView android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-</ListView>
+</android.support.v7.widget.RecyclerView>
 </android.support.design.widget.CoordinatorLayout>
