--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,15 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ProgressBar" />
+
+    <style name="ProgressBar.Custom" />
+
+    <style name="ProgressBar.Custom.Download">
+        <item name="android:interpolator">@android:interpolator/anticipate_overshoot</item>
+        <item name="android:indeterminateDuration">@integer/custom_progressbar_animation_duration</item>
+        <item name="android:indeterminateDrawable">@drawable/custom_progress_circle</item>
+        <item name="android:layout_margin">@dimen/default_gap</item>
+    </style>
+
 </resources>
