--- a/app/src/main/res/layout/activity_groups_list.xml
+++ b/app/src/main/res/layout/activity_groups_list.xml
@@ -1,12 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/debt_create_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="40dp"
+        custom:layout_anchorGravity="top|left"
+        android:visibility="invisible">  <!-- 16 + 48/2 = 40 (center of FAB) -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/debt_create_search_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:hint="@string/start_writing_name"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/debt_create_contact_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floating_add_button"
@@ -15,41 +45,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add_white_48dp" />
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/debt_create_form"
-        android:layout_width="300dp"
-        android:layout_height="430dp"
-        android:layout_gravity="center"
-        android:visibility="invisible">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <AutoCompleteTextView
-                android:id="@+id/debt_create_to_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="@string/start_writing_name"/>
-
-            <EditText
-                android:id="@+id/debt_create_amount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:hint="@string/enter_amount"/>
-
-            <Button
-                android:id="@+id/debt_create_confirm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
 
     <include layout="@layout/view_custom_progressbar" />
 
