--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -11,7 +11,7 @@
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:descendantFocusability="blocksDescendants"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:background="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/contact_img"
@@ -20,7 +20,8 @@
         android:layout_margin="5dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/avatar"/>
 
     <TextView
         android:id="@+id/contact_name"
