--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="custom_progressbar_animation_duration">1000</integer>
+    <integer name="google_plus_contacts_cache_size">1000</integer>
+    <integer name="google_plus_contact_image_cache_max_size">1000</integer>
 </resources>
