--- a/app/src/main/res/layout/debts_list_item.xml
+++ b/app/src/main/res/layout/debts_list_item.xml
@@ -23,7 +23,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:scaleType="centerCrop"
-            android:id="@+id/debt_item_contact_img"/>
+            android:id="@+id/debt_item_contact_img"
+            android:contentDescription="@string/avatar"/>
 
         <ImageView
             android:layout_width="24dp"
@@ -62,7 +63,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold"
             android:text="@string/placeholder_number"
             android:id="@+id/debt_item_amount"
