Implement debt approval
- Retrieve current contact image too
- Implement test server logic. Closes #8
- ui fixes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="not_approved_debt">#9b9900</color>
+    <color name="approved_debt">#229b00</color>
 </resources>
