--- a/app/src/main/res/menu/menu_debt_list.xml
+++ b/app/src/main/res/menu/menu_debt_list.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".DebtsListActivity">
+
+    <item
+        android:id="@+id/action_refresh_debts"
+        android:orderInCategory="1"
+        android:title="@string/refresh"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
