--- a/app/src/main/res/layout/activity_debt_list.xml
+++ b/app/src/main/res/layout/activity_debt_list.xml
@@ -13,9 +13,9 @@
         android:id="@+id/debt_create_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="40dp"
+        android:layout_margin="48dp"
         custom:layout_anchorGravity="top|left"
-        android:visibility="invisible">  <!-- 16 + 48/2 = 40 (center of FAB) -->
+        android:visibility="invisible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,23 +38,32 @@
 
     </android.support.v7.widget.CardView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floating_give_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="@dimen/give_fab_bottom_margin"
-        android:src="@drawable/ic_add_white_48dp" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floating_get_button"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/floating_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_white_48dp" />
+        android:src="@drawable/ic_add_white_48dp"
+        custom:menu_fab_label="@string/debts_menu">
 
+        <com.github.clans.fab.FloatingActionButton
+            style="@style/MenuButtonsStyle"
+            android:id="@+id/floating_give_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_attach_money_white_24dp"
+            custom:fab_label="@string/give_debt"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            style="@style/MenuButtonsStyle"
+            android:id="@+id/floating_get_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_money_off_white_24dp"
+            custom:fab_label="@string/get_debt"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
 
     <include layout="@layout/view_custom_progressbar" />
 
