--- a/app/src/main/res/menu/menu_debt_list.xml
+++ b/app/src/main/res/menu/menu_debt_list.xml
@@ -6,6 +6,7 @@
     <item
         android:id="@+id/action_refresh_debts"
         android:orderInCategory="1"
+        android:icon="@drawable/ic_refresh_white_48dp"
         android:title="@string/refresh"
         app:showAsAction="ifRoom"/>
 
