--- a/app/src/main/res/menu/popup_debt_item.xml
+++ b/app/src/main/res/menu/popup_debt_item.xml
@@ -5,4 +5,8 @@
         android:id="@+id/delete_debt"
         android:title="@string/delete"/>
 
+    <item
+        android:id="@+id/show_audit"
+        android:title="@string/audit"/>
+
 </menu>
