--- a/app/src/main/res/layout/activity_debt_list.xml
+++ b/app/src/main/res/layout/activity_debt_list.xml
@@ -10,34 +10,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/debt_create_form"
+    <io.codetail.widget.RevealFrameLayout
+        android:id="@+id/circular_reveal_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="48dp"
-        custom:layout_anchorGravity="top|left"
-        android:visibility="invisible">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/debt_create_form"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_margin="48dp"
+            custom:layout_anchorGravity="top|left"
+            android:visibility="invisible">
 
-            <EditText
-                android:id="@+id/debt_create_search_edit"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:hint="@string/start_writing_name"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/debt_create_contact_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                <EditText
+                    android:id="@+id/debt_create_search_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:hint="@string/start_writing_name"/>
 
-        </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/debt_create_contact_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </io.codetail.widget.RevealFrameLayout>
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/floating_menu"
