Ability to refresh circles (closes #11), filter accounts, also fixes (see below)
- Fix menu button not being returned to initial state when debt is created
- Fix debts being requested on google api connected (should only be requested after circles reload)
- Sort accounts in list by name

--- a/app/src/main/res/menu/menu_debt_list.xml
+++ b/app/src/main/res/menu/menu_debt_list.xml
@@ -11,8 +11,15 @@
         app:showAsAction="ifRoom"/>
 
     <item
+        android:id="@+id/action_reload_circles"
+        android:orderInCategory="2"
+        android:title="@string/reload_contact_list"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="3"
         android:title="@string/settings"
         app:showAsAction="never" />
+
 </menu>
