--- a/app/src/main/res/layout/activity_debt_list.xml
+++ b/app/src/main/res/layout/activity_debt_list.xml
@@ -20,20 +20,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="48dp"
-            custom:layout_anchorGravity="top|left"
             android:visibility="invisible">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="5dp"
                 android:orientation="vertical">
 
-                <EditText
+                <SearchView
                     android:id="@+id/debt_create_search_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
-                    android:hint="@string/start_writing_name"/>
+                    android:iconifiedByDefault="false"
+                    android:queryHint="@string/filter"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/debt_create_contact_list"
