Implement exception handling in Android client. Fixes #10
- also add group search for audit entries
- update gplay-services and support libraries

--- a/app/src/main/res/layout/debts_list_item.xml
+++ b/app/src/main/res/layout/debts_list_item.xml
@@ -22,6 +22,7 @@
             android:layout_margin="5dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"
             android:id="@+id/debt_item_src_img"
             android:contentDescription="@string/avatar"/>
@@ -32,8 +33,11 @@
             android:textSize="18sp"
             android:layout_alignTop="@+id/debt_item_src_img"
             android:layout_toEndOf="@+id/debt_item_src_img"
+            android:layout_toRightOf="@+id/debt_item_src_img"
             android:layout_toStartOf="@+id/debt_item_popup_menu"
+            android:layout_toLeftOf="@+id/debt_item_popup_menu"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/placeholder_text"
             android:id="@+id/debt_item_src_name"
@@ -44,9 +48,11 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:layout_toEndOf="@+id/debt_item_src_img"
+            android:layout_toRightOf="@+id/debt_item_src_img"
             android:layout_below="@+id/debt_item_src_name"
             android:layout_marginTop="5dp"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/not_approved"
             android:textColor="@color/not_approved_debt"
             android:id="@+id/debt_item_src_approval_status"
@@ -58,6 +64,7 @@
             android:layout_margin="5dp"
             android:layout_below="@+id/debt_item_src_approval_status"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"
             android:id="@+id/debt_item_dest_img"
             android:contentDescription="@string/avatar"/>
@@ -68,8 +75,11 @@
             android:textSize="18sp"
             android:layout_alignTop="@+id/debt_item_dest_img"
             android:layout_toEndOf="@+id/debt_item_dest_img"
+            android:layout_toRightOf="@+id/debt_item_dest_img"
             android:layout_toStartOf="@+id/debt_item_popup_menu"
+            android:layout_toLeftOf="@+id/debt_item_popup_menu"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/placeholder_text"
             android:id="@+id/debt_item_dest_name"
@@ -79,9 +89,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/debt_item_dest_img"
+            android:layout_toRightOf="@+id/debt_item_dest_img"
             android:layout_below="@+id/debt_item_dest_name"
             android:layout_marginTop="5dp"
             android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:textSize="12sp"
             android:text="@string/not_approved"
             android:textColor="@color/not_approved_debt"
@@ -93,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/debt_item_dest_approval_status"
             android:layout_toStartOf="@+id/debt_item_amount"
+            android:layout_toLeftOf="@+id/debt_item_amount"
             android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/placeholder_date"
@@ -104,6 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/debt_item_dest_approval_status"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
@@ -116,8 +130,9 @@
             android:layout_height="24dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:id="@+id/debt_item_popup_menu"
-            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
+            android:src="@drawable/abc_ic_menu_overflow_material"
             android:tint="@android:color/darker_gray"
             android:contentDescription="@string/popup_menu"/>
 
