--- a/app/src/main/res/layout/audit_list_item.xml
+++ b/app/src/main/res/layout/audit_list_item.xml
@@ -1,7 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="PrivateResource"
+    android:id="@+id/contact_item_root"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:padding="10dp"
+    android:descendantFocusability="blocksDescendants"
+    android:background="?android:attr/selectableItemBackground">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/contact_img_src"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_margin="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/avatar"/>
+
+    <TextView
+        android:id="@+id/arrow_filler"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_toEndOf="@+id/contact_img_src"
+        android:layout_toRightOf="@+id/contact_img_src"
+        android:layout_margin="5dp"
+        android:gravity="center_vertical"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/arrow_right"/>
+
+    <ImageView
+        android:id="@+id/contact_img_dst"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_margin="5dp"
+        android:layout_toEndOf="@+id/arrow_filler"
+        android:layout_toRightOf="@+id/arrow_filler"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/avatar"/>
+
+    <TextView
+        android:id="@+id/original_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_toEndOf="@+id/contact_img_dst"
+        android:layout_toRightOf="@+id/contact_img_dst"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center_vertical"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/placeholder_number"
+        android:textColor="@android:color/holo_green_dark"/>
+
+    <TextView
+        android:id="@+id/settle_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_toEndOf="@+id/original_amount"
+        android:layout_toRightOf="@+id/original_amount"
+        android:layout_margin="5dp"
+        android:gravity="center_vertical"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/placeholder_number"/>
+
+    <TextView
+        android:id="@+id/settle_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/contact_img_src"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/placeholder_date"/>
+
+</RelativeLayout>
